Added test_vars.yml for the Vagrant image.

--- a/vars.yml
+++ b/vars.yml
@@ -1,6 +1,3 @@
 ---
-# vars file for xwiki
+# test vars file for xwiki
 
-testing: true
-postgresql_listen_addresses: '*'
-postgresql_pg_hba_trust_hosts: [all]
