--- a/playbook.yml
+++ b/playbook.yml
@@ -30,3 +30,19 @@
     - role: ansiblebit.oracle-java
       oracle_java_version: "{{xwiki_java_version}}"
       oracle_java_set_as_default: yes
+
+    - role: tomcat
+
+    # - role: groover.tomcat
+    #   tomcat_instances:
+    #   - name: xwiki
+    #     user: xwiki
+    #     group: xwiki
+    #     path: /srv/xwiki
+    #     home: /home/xwiki
+    #     service_name: xwiki@tomcat
+    #     service_file: xwiki@.service
+    #     port_ajp: 18009
+    #     port_connector: 18080
+    #     port_redirect: 18443
+    #     port_shutdown: 18005
