sha256sum of postgresql jdbc driver.

--- a/install.yml
+++ b/install.yml
@@ -1,12 +1,10 @@
 
-
 - name: Download PostgreSQL JDBC Driver
   local_action: get_url
   args:
     url: "{{ postgresql_jdbc_driver_url }}"
     dest: "{{ lib_persistent_data_path_local }}/{{ postgresql_jdbc_driver_filename }}"
-    # sha256sum: "{{ xwiki_sha256sum }}"
-
+    sha256sum: "{{ postgresql_jdbc_driver_sha256sum }}"
 
 - name: Install PostgreSQL JDBC Driver in Tomcat
   copy:
@@ -14,6 +12,7 @@
     dest: "{{ xwiki_path }}/lib"
     owner: "{{ xwiki_user }}"
     group: "{{ xwiki_group }}"
+  notify: service restart tomcat
 
 - name: Download XWiki
   local_action: get_url
