Added some catalina options to the xwiki tomcat instance

--- a/defaults.yml
+++ b/defaults.yml
@@ -27,3 +27,4 @@ tomcat_redis_sha256sum: 7e23260f2481aca88f89838e91cb9ff00548a28ba5a19a88ff99388c
 tomcat_web_xml_schema_version: 3.1
 
 xwiki_tomcat_path: /srv/xwiki
+xwiki_catalina_opts: "-Dfile.encoding=UTF-8 -Xms128m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=256m"
