--- a/playbook.yml
+++ b/playbook.yml
@@ -43,6 +43,7 @@
         home: /home/{{ xwiki_user }}
         service_name: tomcat-xwiki
         service_file: tomcat-xwiki.service
+        catalina_opts: "{{ xwiki_catalina_opts}}"
         port_ajp: 18009
         port_connector: 18080
         port_redirect: 18443
