xwiki_debug variable true when testing.

--- a/test_vars.yml
+++ b/test_vars.yml
@@ -1,5 +1,6 @@
----
 # test vars file for xwiki
 
-postgresql_listen_addresses: '*'
-postgresql_pg_hba_trust_hosts: [all]
+xwiki_debug: true
+
+# postgresql_listen_addresses: '*'
+# postgresql_pg_hba_trust_hosts: [all]
