--- a/vars.yml
+++ b/vars.yml
@@ -1,6 +1,7 @@
 ---
 # vars file for xwiki
 
+xwiki_tomcat_path: /var/lib/xwiki
 xwiki_path: "{{ xwiki_tomcat_path }}/catalina/xwiki"
 
 # filename of XWiki war
