Create a Systemd dependency from xwiki-tomcat to postgresql

--- a/vars.yml
+++ b/vars.yml
@@ -7,5 +7,8 @@ xwiki_path: "{{ xwiki_tomcat_path }}/catalina/xwiki"
 # filename of XWiki war
 xwiki_filename: xwiki-{{ xwiki_version }}.war
 
+postgresql_version: "{{ xwiki_postgresql_version }}"
 postgresql_jdbc_driver_filename: "postgresql-{{ postgresql_jdbc_driver_version }}.jar"
 postgresql_jdbc_driver_url: "https://jdbc.postgresql.org/download/{{ postgresql_jdbc_driver_filename }}"
+
+tomcat_server_systemd_template: tomcat_xwiki_service_systemd.j2
