Set (httpd_can_network_connect) flag on and keep it persistent across reboots

--- a/configure.yml
+++ b/configure.yml
@@ -10,3 +10,6 @@
     group: "{{ xwiki_group }}"
     mode: 0600
   notify: service restart tomcat
+
+# Set (httpd_can_network_connect) flag on and keep it persistent across reboots
+- seboolean: name=httpd_can_network_connect state=yes persistent=yes
