--- a/configure.yml
+++ b/configure.yml
@@ -13,11 +13,11 @@
 
 - name: Ensure libsemanage-python is installed
   yum: name=libsemanage-python state=present
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" and ansible_selinux.status == "enabled"
 
 - name: Ensure libsemanage-python is installed
   apt: name=libsemanage-python state=present
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and ansible_selinux.status == "enabled"
 
 - name: Set (httpd_can_network_connect) flag on and keep it persistent across reboots
   seboolean: name=httpd_can_network_connect state=yes persistent=yes
