Added ssl certs role

--- a/defaults.yml
+++ b/defaults.yml
@@ -28,3 +28,7 @@ tomcat_web_xml_schema_version: 3.1
 
 xwiki_tomcat_path: /srv/xwiki
 xwiki_catalina_opts: "-Dfile.encoding=UTF-8 -Xms128m -Xmx1024m -XX:PermSize=64m -XX:MaxPermSize=256m"
+
+ssl_certs_common_name: "{{ servername }}"
+ssl_certs_path_owner: "apache"
+ssl_certs_path_group: "apache"
