--- a/requirements.yml
+++ b/requirements.yml
@@ -15,3 +15,7 @@
 - src: https://github.com/geerlingguy/ansible-role-apache
   name: geerlingguy.apache
   version: 2b44f305e97f65e2689ac4cbc9e440654e3732ed
+
+- src: https://github.com/rastandy/ansible-role-ssl-certs
+  name: jdauphant.ssl-certs
+  version: fc818f18d24df70b085955d4d9cc8c99748df4f9
