Explicitly set postfix_hostname to the servername variable.

--- a/playbook.yml
+++ b/playbook.yml
@@ -85,6 +85,7 @@
             ProxyPassReverse / ajp://localhost:18009/
 
     - role: rastandy.postfix
+      postfix_hostname: "{{ servername }}"
 
     - role: geerlingguy.firewall
       firewall_allowed_tcp_ports:
