--- a/playbook.yml
+++ b/playbook.yml
@@ -85,13 +85,28 @@
             ProxyPassReverse / ajp://localhost:18009/
 
     - role: rastandy.postfix
-      postfix_hostname: "{{ servername }}"
 
     - role: geerlingguy.firewall
       firewall_allowed_tcp_ports:
         - "22"
         - "80"
         - "443"
+
+    # Setup the database backup
+    - role: Stouts.backup
+      backup_enabled: yes
+      backup_postgres_user: postgres
+      backup_postgres_host: ""
+      backup_max_age: 1M
+      backup_full_max_age: 1M
+      backup_max_full_backups: 60
+      backup_profiles:
+        - name: xwiki_postgresql
+          action: backup
+          schedule: 0 4 * * *
+          user: postgres
+          source: postgresql://{{xwiki_database}}
+          target: file:///var/lib/pgsql/{{ xwiki_postgresql_version }}/backups
 
   tasks:
     - include: ./install.yml
