Install Riemann server and clients

--- a/defaults.yml
+++ b/defaults.yml
@@ -38,3 +38,5 @@ xwiki_environment_permanent_directory: "{{xwiki_tomcat_path}}/persistent_data/"
 
 # xwiki_validation_key: "PLEASE CHANGE ME AS SOON AS YOU CAN"
 # xwiki_encryption_key: "PLEASE CHANGE ME AS SOON AS YOU CAN"
+
+riemann_version:      0.2.10
