Put handlers in their own file

--- a/playbook.yml
+++ b/playbook.yml
@@ -179,7 +179,4 @@
     - include: ./configure.yml
 
   handlers:
-    - name: Restart tomcat-xwiki
-      service:
-        name: tomcat-xwiki
-        state: restarted
+    - include: ./handlers.yml
