--- a/playbook.yml
+++ b/playbook.yml
@@ -179,4 +179,10 @@
     - include: ./configure.yml
 
   handlers:
-    - include: ./handlers.yml
+    - name: Restart tomcat-xwiki
+      service:
+        name: tomcat-xwiki
+        state: restarted
+
+    - name: New mail aliases
+      command: /usr/bin/newaliases
