Setup email aliases so that root emails get forwarded to administrator_email address

--- a/configure.yml
+++ b/configure.yml
@@ -62,6 +62,10 @@
     job: "/usr/local/bin/duply xwiki purge --force >> /var/log/duply/xwiki.log 2>&1"
     cron_file: "xwiki-purge"
 
+- name: Ensure operators receive local root emails
+  lineinfile: "dest=/etc/aliases regexp='^root: ' line='root: {{ administrator_email }}' state=present"
+  notify: New mail aliases
+
 - name: Ensure the collectd.d directory is present
   file:
     path: "/etc/collectd.d"
